--- a/html/index.html
+++ b/html/index.html
@@ -105,6 +105,8 @@
         </div>
     </div>
 
+    Alte linkuri utile:
+
     https://ro.wikipedia.org/wiki/Lista_celor_mai_influente_100_cărți_din_istoria_omenirii 
 </body>
 </html>
